# luna16

./: .env.example  .env.tune  .env.tune.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pod.sh  uv.lock.cuda
.devcontainer/: Dockerfile  devcontainer.json
data/: annotations_with_malignancy.csv  result_grid.csv
data_downloaded/: download_files.sh
luna16/: README.md  __init__.py  bootstrap.py  cli.py  ct.py  cutouts.py  data_exploration.ipynb  dto.py  end_to_end_detection.ipynb  enums.py  fine_tunning.ipynb  hyperparameters_container.py  services.py  settings.py  trainers.py  training.ipynb  utils.py  visualizations.py
luna16/augmentations/: __init__.py  augmendation_module.py  base.py
luna16/batch_iterators/: __init__.py  base.py  batch_iterator.py
luna16/bootstrap/: __init__.py  boorstrap.py  configurations.py  model_factories.py  service_factories.py
luna16/data_processing/: __init__.py  ct.py  cutouts.py  utils.py
luna16/datasets/: __init__.py  data_module.py  dataset.py  malignant_cutout.py  nodule_classification.py  nodule_classification_rationed.py  nodule_cutouts.py  nodule_segmentation.py  utils.py
luna16/datasets/utils/: __init__.py  candidates.py  ct.py  utils.py
luna16/message_handler/: __init__.py  message_handler.py  messages.py  utils.py
luna16/message_handler/handlers/: __init__.py  ct_image_handlers.py  handlers.py
luna16/models/: __init__.py  base.py  classification_model.py  nodule_classification_model.py  nodule_segmentation_model.py
luna16/models/nodule_segmentation/: __init__.py  normalized_unet.py  unet.py
luna16/modules/: __init__.py
luna16/modules/nodule_classfication/: __init__.py  base.py  biased.py  bn.py  dropout.py  dropout3d.py  dropout_only.py  models.py  modules.py
luna16/modules/nodule_segmentation/: normalized_unet.py  unet.py
luna16/notebooks/: README.md  cloud_training.ipynb  data_exploration.ipynb  end_to_end_detection.ipynb  fine_tunning.ipynb  hyperparameter_tuning.ipynb  improving_training.ipynb  inference.ipynb  luna16.ipynb  malignancy_data_exploration.ipynb  processed_data.ipynb  processing_data.ipynb  segmentation.ipynb  torchvision_tutorial.ipynb  training.ipynb  visualizations.py
luna16/scoring/: __init__.py  classification.py  confusion_matrix.py  performance.py
luna16/services/: __init__.py  creators.py  model_saver.py  service_container.py  utils.py
luna16/tests/: conftest.py  fakes.py  test_augmentations.py  test_batch_iterator.py  test_ct.py  test_data_module.py  test_luna_dataloader.py  test_luna_dataset.py  test_message_handler.py  test_service_container.py  test_trainer.py
luna16/trainers/: __init__.py  base.py  trainer.py
luna16/training/: __init__.py  base.py  malignant_classification_traning.py  model_saver.py  nodule_classification_training.py  nodule_classification_training_old.py  nodule_segmentation_training.py  nodule_segmentation_training_old.py  trainers.py
luna16/training_logging/: __init__.py  base.py  ct_image_logger_wrapper.py  dto.py  handlers.py  log_message_handler.py  log_messages.py  logger_wrappers.py  logging_adapters.py
luna16/training_logging/handlers/: __init__.py  ct_image_handlers.py  handlers.py
luna16/utils/: __init__.py  candidates.py  utils.py
profiling/: README.md
scripts/: download_files.sh  run-pod-profiling.sh  run-pod-setup.sh  run-pod-training.sh  run-pod-tuning.sh
test_data/cache/: 1.3.6.1.4.1.14519.5.2.1.6279.6001.197987940182806628828566429132_257:262:128.npz  1.3.6.1.4.1.14519.5.2.1.6279.6001.219909753224298157409438012179_108:362:377.npz  1.3.6.1.4.1.14519.5.2.1.6279.6001.226456162308124493341905600418_122:313:427.npz  1.3.6.1.4.1.14519.5.2.1.6279.6001.226456162308124493341905600418_136:361:405.npz  1.3.6.1.4.1.14519.5.2.1.6279.6001.267957701183569638795986183786_317:353:164.npz  1.3.6.1.4.1.14519.5.2.1.6279.6001.332453873575389860371315979768_127:339:297.npz  present_candidates.csv  present_candidates_without_benign.csv  present_candidates_without_malignant.csv  present_candidates_without_nodule.csv
